# cqrs-chat

./: .dockerignore  .gitignore  Cargo.toml  README.md  cargo.toml  docker-compose.yaml  package-lock.json  package.json  turbo.json
.github/workflows/: CD.yml
aggregates/chat/: Cargo.toml  Dockerfile
aggregates/chat/src/: main.rs
apps/chat-client/: .gitignore  Cargo.toml  Dockerfile  index.html  package.json
apps/chat-client-next/: Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.js
apps/chat-client-next/components/: EmojiSuggester.tsx  Sidebar.module.css  Sidebar.tsx  Tooltip.module.css  Tooltip.tsx  info.tsx
apps/chat-client-next/hooks/: use-websocket.ts
apps/chat-client-next/pages/: _app.tsx  index.tsx
apps/chat-client-next/pages/api/: create-chat.ts  send-chat-message.ts  url.ts  websocket-url.ts
apps/chat-client-next/pages/api/chats/: [id].ts  index.ts
apps/chat-client-next/pages/chats/: [id].tsx
apps/chat-client-next/pages/create-chat/: index.tsx
apps/chat-client-next/storage/: user-store.ts
apps/chat-client-next/styles/: globals.css
apps/chat-client-next/swr/: use-swr.ts
apps/chat-client/src/: app.rs  main.rs  root.tsx
apps/chat-client/src/api/: chat-client.ts  command-client.ts
apps/chat-client/src/components/: Button.tsx  Input.tsx
apps/chat-client/src/routes/: [...404].tsx  create-chat.tsx  index.tsx
apps/chat-client/src/routes/chats/: [...chatId].tsx
apps/chat-client/src/server/: actix_integ.rs
apps/chat-client/src/services/: chats-service.ts  command-service.ts
apps/chat-client/src/storage/: user-store.ts
apps/chat-client/style/: main.scss
projections/chat/: Cargo.toml  Dockerfile
projections/chat-subscriber/: Cargo.toml  Dockerfile
projections/chat-subscriber/src/: main.rs
projections/chat/src/: main.rs
services/chat-aggregate/: package.json
services/chat-projection/: package.json
services/chat-projection/src/: main.rs
