[package]
name = "chat-aggregate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
eventstore = "2.1.1"
serde = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.6"
events = { path = "../../packages/events" }
log = "0.4.17"
env_logger = "0.10.0"
actix-cors = "0.6.4"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4", # Lets you generate random UUIDs
]
