
[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.0.22", default-features = false, features = ["serde"] }
leptos_meta = { version = "0.0.7", default-features = false }
leptos_router = { version = "0.0.8", default-features = false }
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
uuid = { version = "1", features = ["v4", "js", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dtos = { path = "../../packages/dtos" }
gloo-net = { version = "0.2", features = ["http"] }
reqwasm = "0.5.0"
eyre = { version = "0.6.8" }
cfg-if = "1.0"
dotenvy = "0.15.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]


[lib]
crate-type = ["cdylib", "rlib"]




[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.leptos]
# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.

# [Optional] Files in the asset_dir will be copied to the target/site directory
assets-dir = "assets"
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
style-file = "style/main.scss"

bin-features = ["ssr"]

lib-features = ["hydrate"]
