[package]
name = "chat-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
env_logger = "0.10.0"
eventstore = "2.1.1"
eyre = "0.6.8"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
events = { path = "../../packages/events" }
async-trait = "0.1.60"
bytes = "1.3.0"
