[package]
name = "chat-projection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
eventstore = "2.1.1"
events = { path = "../../packages/events" }
dtos = { path = "../../packages/dtos" }
serde_json = "1.0.91"
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v4"] }
serde = "1.0.152"
actix-cors = "0.6.4"
